# localization

./: .dockerignore  .gitignore  Dockerfile  README.md  collect_dataset.py  debug.py  docker-compose.yaml  localization.py  main.py  requirements.txt  test.py  video.py  videoHandler.py
config/: cameraConfig.py
datasets/: collect_dataset.py  marker_desc.yaml
datasets/labels/: img0.txt
grid/: Grid.py  Point.py  Square.py
handlers/: __init__.py  markerHadler.py  testGrid.py  testHandlers.py  videoHandler.py
launch/: docker_launch.sh
map/: map.py
src/camera_node/: CMakeLists.txt  package.xml
src/camera_node/launch/: camera.launch
src/camera_node/src/: camera_node.py
src/extend_localization/: CMakeLists.txt  package.xml
src/extend_localization/launch/: localization_docker.launch  localization_local.launch
src/find_apriltag/: CMakeLists.txt  package.xml
src/find_apriltag/launch/: findApriltag.launch
src/find_apriltag/src/: find_apriltag_node.py
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: cameraConfig.py
src/localization/launch/: all.launch  camera.launch  localization.launch
src/localization/src/: localize_node.py
src/localization_msgs/: CMakeLists.txt  package.xml
src/localization_msgs/msg/: FloorCoords.msg  Image.msg  RealRobotCoords.msg  RobotCoords.msg
src/map/: CMakeLists.txt  package.xml
src/map/launch/: map.launch
src/map/src/: map_node.py
src/utils/: CMakeLists.txt  package.xml  setup.py
src/utils/src/grid/: Grid.py  Point.py  __init__.py
src/utils/src/handlers/: __init__.py  markerHadler.py  (+4 more)
(+3 files in other folders)
